Etape6, Etape7 and Etape8

--- a/TP4.ipynb
+++ b/TP4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJ+YYsjLHS80yxMcE+i9j2"
+      "authorship_tag": "ABX9TyNbWEX/rbb1VBiJqyeD2mG9"
     },
     "kernelspec": {
       "name": "python3",
@@ -659,7 +659,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 527
+          "height": 515
         },
         "id": "rCrcvdDDaijI",
         "outputId": "8668a273-4144-430f-9ffb-c0a1e0562fc3"
@@ -880,6 +880,215 @@
       "metadata": {
         "id": "vskWrFyOhWma"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Étape 6 : Test Chi-deux**"
+      ],
+      "metadata": {
+        "id": "0-o1znIHh_DJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Table de contingence\n",
+        "contingence = pd.crosstab(df['Sex'], df['Survived'])"
+      ],
+      "metadata": {
+        "id": "shK5_gxgiBmH"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# H0 : Pas d'independance\n",
+        "scipy.stats.chi2_contingency(contingence)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s0Nfm7v-iRLj",
+        "outputId": "86e52eb0-d964-456f-e328-77a19e03edcf"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Chi2ContingencyResult(statistic=np.float64(260.71702016732104), pvalue=np.float64(1.1973570627755645e-58), dof=1, expected_freq=array([[193.47474747, 120.52525253],\n",
+              "       [355.52525253, 221.47474747]]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Table de contingence\n",
+        "contingence = pd.crosstab(df['Pclass'], df['Survived'])\n",
+        "# H0 : Pas d'independance\n",
+        "scipy.stats.chi2_contingency(contingence)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OcInJE9Ai3q5",
+        "outputId": "a9750d21-7edb-4e80-df3e-9839c6468755"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Chi2ContingencyResult(statistic=np.float64(102.88898875696056), pvalue=np.float64(4.549251711298793e-23), dof=2, expected_freq=array([[133.09090909,  82.90909091],\n",
+              "       [113.37373737,  70.62626263],\n",
+              "       [302.53535354, 188.46464646]]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Questions :\n",
+        "\n",
+        "1.    La survie dépend-elle du sexe ?\n",
+        "      - Oui, le test Chi-deux donne p-value ≈1.20e-58 (< 0.05), rejetant H0.\n",
+        "2.    La classe influence-t-elle la survie ?\n",
+        "      - Oui, pour `Pclass` vs `Survived`, p-value ≈4.55e-23 (< 0.05). Les classes supérieures survivent plus"
+      ],
+      "metadata": {
+        "id": "ElK03NaFi4Tr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Étape 7 : ANOVA**"
+      ],
+      "metadata": {
+        "id": "YQ2MogKijZNh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# H0 : Toutes moyennes égales.\n",
+        "scipy.stats.f_oneway(df[df['Pclass']==1]['Fare'], df[df['Pclass']==2]['Fare'], df[df['Pclass']==3]['Fare'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gyUiq7hhjhNE",
+        "outputId": "2622a6b6-ccaa-4d77-fedb-490ddad302f3"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "F_onewayResult(statistic=np.float64(242.34415651744814), pvalue=np.float64(1.0313763209141171e-84))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Questions :\n",
+        "\n",
+        "1.    Les tarifs moyens des classes diffèrent-ils ?\n",
+        "      - Oui, l'ANOVA donne p-value ≈1.03e-84 (< 0.05), rejetant H0. Il y a des différences significatives.\n",
+        "2.    Quelle classe a le tarif le plus élevé ?\n",
+        "      - La classe 1 (moyenne ≈84.15), suivie de 2 (≈20.66) et 3 (≈13.68)."
+      ],
+      "metadata": {
+        "id": "YBVBh8-Fjqjm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Étape 8 : Corrélations**"
+      ],
+      "metadata": {
+        "id": "BTUgB7dxj9Nq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pearson : Pour linéaire\n",
+        "df_corr = df[['Age', 'Fare']]\n",
+        "scipy.stats.pearsonr(df_corr['Age'], df_corr['Fare'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9RJjXHQAkAKR",
+        "outputId": "75c411a2-b66f-4f0f-dc0a-f757b0034d74"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PearsonRResult(statistic=np.float64(nan), pvalue=np.float64(nan))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Spearman : Pour non-linéaire\n",
+        "df_corr = df[['Age', 'Fare']]\n",
+        "scipy.stats.spearmanr(df_corr['Age'], df_corr['Fare'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0_hz8FnakKx6",
+        "outputId": "1d1744b6-01bc-4377-d539-73d434adc03b"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SignificanceResult(statistic=nan, pvalue=nan)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
     }
   ]
 }
