Correction de Nan values pour correlations test entre 'Age' et 'Fare' - Ajouter les réponses

--- a/TP4.ipynb
+++ b/TP4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbWEX/rbb1VBiJqyeD2mG9"
+      "authorship_tag": "ABX9TyMXVBZitDsBSbtIeHxOdUHQ"
     },
     "kernelspec": {
       "name": "python3",
@@ -659,7 +659,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 515
+          "height": 527
         },
         "id": "rCrcvdDDaijI",
         "outputId": "8668a273-4144-430f-9ffb-c0a1e0562fc3"
@@ -1038,7 +1038,7 @@
       "cell_type": "code",
       "source": [
         "# Pearson : Pour linéaire\n",
-        "df_corr = df[['Age', 'Fare']]\n",
+        "df_corr = df[['Age', 'Fare']].dropna()\n",
         "scipy.stats.pearsonr(df_corr['Age'], df_corr['Fare'])"
       ],
       "metadata": {
@@ -1046,19 +1046,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9RJjXHQAkAKR",
-        "outputId": "75c411a2-b66f-4f0f-dc0a-f757b0034d74"
+        "outputId": "170f6978-8b38-4900-e8b5-4977475ea851"
       },
-      "execution_count": 38,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "PearsonRResult(statistic=np.float64(nan), pvalue=np.float64(nan))"
+              "PearsonRResult(statistic=np.float64(0.0960666917690389), pvalue=np.float64(0.010216277504447018))"
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 40
         }
       ]
     },
@@ -1066,7 +1066,7 @@
       "cell_type": "code",
       "source": [
         "# Spearman : Pour non-linéaire\n",
-        "df_corr = df[['Age', 'Fare']]\n",
+        "df_corr = df[['Age', 'Fare']].dropna()\n",
         "scipy.stats.spearmanr(df_corr['Age'], df_corr['Fare'])"
       ],
       "metadata": {
@@ -1074,21 +1074,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0_hz8FnakKx6",
-        "outputId": "1d1744b6-01bc-4377-d539-73d434adc03b"
+        "outputId": "81e61d00-046f-4a7c-dc4f-6c871e00d70d"
       },
-      "execution_count": 39,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "SignificanceResult(statistic=nan, pvalue=nan)"
+              "SignificanceResult(statistic=np.float64(0.1350512177342878), pvalue=np.float64(0.00029580903243060916))"
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 41
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Questions :\n",
+        "\n",
+        "1.    Existe-t-il une corrélation entre âge et tarif ?\n",
+        "      - Oui, mais faible : coefficient Pearson ≈0.096 (positive, linéaire faible), Spearman ≈0.131 (monotone faible).\n",
+        "2.    Le coefficient est-il significatif ?\n",
+        "      - Oui, p-value Pearson ≈0.010 (< 0.05), rejetant H0. Il y a une corrélation significative."
+      ],
+      "metadata": {
+        "id": "Ca9t79U3lNWW"
+      }
     }
   ]
 }
